<resources>
    <string name="app_name">Pattern Clinic</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="text_enter_your_register">Enter your registered email below to reset your password.</string>
    <string name="john_mail">johnmusk@gmail.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_enter_new_password">Enter new password and confirm it.</string>
    <string name="submit">Submit</string>
    <string name="create_profile">Create Profile</string>
    <string name="upload_profile">Upload Profile Picture</string>
    <string name="continue_text">Continue</string>
    <string name="select_gender_of_birth">Select Gender at Birth</string>
    <string name="usa">USA</string>
    <string name="musk">MUSK</string>
    <string name="select_country">Select Country</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="how_refer_you">How should we refer to you?</string>
    <string name="she">She</string>
    <string name="he">He</string>
    <string name="they">They</string>
    <string name="text_line_support"><u>Contact support for help</u></string>
    <string name="connect_your_device_and">Connect your device and get started</string>
    <string name="watch">Watch</string>
    <string name="scale">Scale</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="get_started">Get Started</string>
    <string name="select_pattern_team">Select A Pattern Plus Team</string>
    <string name="select_location">Select Location</string>
    <string name="select_pattern_plus_provider">Select A Pattern Plus Provider</string>
    <string name="select_pattern_plus_coach">Select A Pattern Plus Coach</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dr_shaun">Dr. Shaun Murphy</string>
    <string name="padiatricians">Pediatricians</string>
    <string name="skip"><u>Skip</u></string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="next">Next</string>
    <string name="hi_john">Hi John!</string>
    <string name="progress_tracker">Progress Tracker</string>
    <string name="ap_score">AP<sup>+</sup>Score</string>
    <string name="ap_score_title">AP+ Score</string>
    <string name="seventy_seven">77</string>
    <string name="bpm">BPM</string>
    <string name="sixty_five">65%</string>
    <string name="todays_activities">Today\'s Activities</string>
    <string name="skipping_ropes">Skipping Ropes</string>
    <string name="exp_text">150 * 3</string>
    <string name="completed">Completed</string>
    <string name="complete">Complete</string>
    <string name="view_all"><u>View All</u></string>
    <string name="accountability">Accountability</string>
    <string name="nutrition_tracking">Nutrition Tracking</string>
    <string name="optimal_fitness">Optimal Fitness</string>
    <string name="trends">Trends</string>
    <string name="cycling">Cycling</string>
    <string name="mountain_clim">Mountain Climbers</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="watch_connected">Watch connected successfully.</string>
    <string name="watch_disconnected">Watch is not successfully connected.</string>
    <string name="your_profile_is_under">Your profile is under reviewing process. Please wait...</string>
    <string name="approved_profile">Your profile has been approved by our team. Please get started</string>
    <string name="decline_request">Account set up could not be completed. Please contact A Pattern Medical Clinic for support.</string>
    <string name="contact_support">Contact Support</string>
    <string name="food_recipe">Food Recipes</string>
    <string name="breakfast_recipe">Breakfast Recipe</string>
    <string name="exa_time">9:30 AM</string>
    <string name="healthy_lunch">Healty Lunch</string>
    <string name="exa_time_2">2:00 PM</string>
    <string name="exa_nutrition_tracking">Aenean non ex nulla. Vivamus a enim tristique, sodales lacus sed, aliquam libero. In hac habitasse platea dictumst. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eu facilisis lorem. Aliquam vulputate vitae ligula sed lacinia. Sed rutrum bibendum ipsum id malesuada.</string>
    <string name="quantity">Quantity:</string>
    <string name="two_bread">2 Breads with Peanut Butter</string>
    <string name="did_like_recipe">Did you like the recipe?</string>
    <string name="your_optimal_score">Your Optimal Score</string>
    <string name="eighty_three">83</string>
    <string name="by_hundred">/100</string>
    <string name="what_optimal_score">What is an Optimal Fitness Score?</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor odio, commodo ut nulla eu, pharetra gravida libero. Curabitur molestie bibendum turpis, et vulputate lorem consectetur nec. Donec ultricies iaculis leo, vel laoreet quam pellentesque vel. Donec at odio in metus congue dictum. Suspendisse finibus cursus libero, sed ultricies ipsum ullamcorper ac. Fusce non nisl a risus eleifend fringilla sed sed justo. Integer lobortis lobortis pharetra.</string>
    <string name="how_increase_optimal">How to increase your Optimal Fitness Score?</string>
    <string name="home">Home</string>
    <string name="coaching_appointment">Coach Appointments</string>
    <string name="message">Messages</string>
    <string name="personal_matrices">Personal Metrics</string>
    <string name="health_tips">Health Tips</string>
    <string name="my_profile">My Profile</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="exa_mellisa_smith">Mellissa Smith</string>
    <string name="exa_stella_smith">Stella Smith</string>
    <string name="exa_emma_watson">Emma Watson</string>
    <string name="exa_text">Aenean non ex nulla. Vivamus a enim tristique, sodales lacus sed, aliquam libero. In hac habitasse platea dictumst. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eu facilisis lorem. Aliquam vulputate vitae ligula sed lacinia. Sed rutrum bibendum ipsum id malesuada.</string>
    <string name="coach_profile">Coach Profile</string>
    <string name="notification">Notifications</string>
    <string name="ability_to_receive">Ability to receive notification</string>
    <string name="turn_on_off">Turn on/off</string>
    <string name="device_management">Device Management</string>
    <string name="change_password">Change Password</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="about_us">About Us</string>
    <string name="term_and_policies"><![CDATA[Terms & Policies]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="john_blake">John Blake</string>
    <string name="personal_information">Personal Information</string>
    <string name="current_height">Current Height</string>
    <string name="current_weight">Current Weight</string>
    <string name="your_api_team">Your AP+ Team</string>
    <string name="heart_rate_exercise">Heart Rate During Exercise</string>
    <string name="max_time">Maximum Time</string>
    <string name="mins">Mins</string>
    <string name="dr_peter">Dr. Peter</string>
    <string name="dermatologists">Dermatologists</string>
    <string name="dr_william">Dr. William Blake</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="reslect_provider"><u>Reselect Provider</u></string>
    <string name="reslect_coach"><u>Reselect Coach</u></string>
    <string name="steps_taken">Steps Taken</string>
    <string name="current_spo2">Current SPO2</string>
    <string name="current_bp">Current BP</string>
    <string name="current_hrv">Current HRV</string>
    <string name="heart_rete_detail">Heart Rate Details</string>
    <string name="max_heart_rate">Max heart rate</string>
    <string name="medium_heart_rate">Medium Heart rate</string>
    <string name="low_heart_rate">Low heart rate</string>
    <string name="your_metrics">Your Metrics</string>
    <string name="adequate_sunlight">Adequate Sunlight</string>
    <string name="plenty_water">Plenty Of Water</string>
    <string name="air">Air</string>
    <string name="trust_divine">Trust In Divine Power</string>
    <string name="temperance">Temperance</string>
    <string name="exercise">Exercise</string>
    <string name="rest">Rest</string>
    <string name="nutrition">Nutrition</string>
    <string name="did_you_finish">Did you finish the entire workout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exercise_completed">Exercise Completed</string>
    <string name="remaining_reps">Remaining Reps</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="lorem_text_max">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor odio, commodo ut nulla eu, pharetra gravida libero. Curabitur molestie bibendum turpis, et vulputate lorem consectetur nec. Donec ultricies iaculis leo, vel laoreet quam pellentesque vel. Donec at odio in metus congue dictum. Suspendisse finibus cursus libero, sed ultricies ipsum ullamcorper ac. Fusce non nisl a risus eleifend fringilla sed sed justo. Integer lobortis lobortis pharetra.\n\n Aenean non ex nulla. Vivamus a enim tristique, sodales lacus sed, aliquam libero. In hac habitasse platea dictumst. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eu facilisis lorem. Aliquam vulputate vitae ligula sed lacinia. Sed rutrum bibendum ipsum id malesuada.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor odio, commodo ut nulla eu, pharetra gravida libero. Curabitur molestie bibendum turpis, et vulputate lorem consectetur nec. Donec ultricies iaculis leo, vel laoreet quam pellentesque vel. Donec at odio in metus congue dictum. Suspendisse finibus cursus libero, sed ultricies ipsum ullamcorper ac. Fusce non nisl a risus eleifend fringilla sed sed justo. Integer lobortis lobortis pharetra.\n\nAenean non ex nulla. Vivamus a enim tristique, sodales lacus sed, aliquam libero. In hac habitasse platea dictumst. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eu facilisis lorem. Aliquam vulputate vitae ligula sed lacinia. Sed rutrum bibendum ipsum id malesuada.</string>
    <string name="subscribe">Subscribe</string>
    <string name="un_subscribe">Unsubscribe</string>
    <string name="lorem_ipsum_is_a_dummy_text">Lorem ipsum is a dummy text.</string>
    <string name="health_tip_detail">Health Tip Details</string>
    <string name="johnblake_gmail_com">johnblake@gmail.com</string>
    <string name="country">Country</string>
    <string name="mar_2_2000">Mar 2, 2000</string>
    <string name="messages">Messages</string>
    <string name="mellissa_smith">Mellissa Smith</string>
    <string name="lorem_ipsum_is_a_dummy_text_2">Lorem ipsum is a dummy text....</string>
    <string name="type_your_message">Type your message...</string>
    <string name="_07_55_am">07:55 AM</string>
    <string name="chat_bot">Chatbot</string>
    <string name="login">Login</string>
</resources>