<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C000000"
        tools:context=".selectTeam.fragments.SelectTeamFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_shape_login"
            android:elevation="@dimen/_2sdp"
            android:orientation="vertical"
            android:paddingStart="@dimen/_21sdp"
            android:paddingEnd="@dimen/_21sdp"
            android:paddingBottom="@dimen/_21sdp">

            <View
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@color/text_color_9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_19sdp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/exercise_completed"
                android:textColor="@color/text_color_4"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/outfit_light"
                android:text="@string/did_you_finish"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/_15ssp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_dialog"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"

                    android:buttonTint="@color/black"
                    android:fontFamily="@font/outfit_regular"
                    android:text="@string/yes"
                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_13ssp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/outfit_regular"
                    android:text="@string/no"
                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_13ssp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_reps_container"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/remaining_reps"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/drawable_shape_login_2"
                    android:drawableEnd="@drawable/ic_dropdown_select"
                    android:fontFamily="@font/outfit_regular"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:text="1"
                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_18sdp"

                android:fontFamily="@font/outfit_semibold"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_8sdp" />

        </LinearLayout>


    </RelativeLayout>
</layout>