<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary_with_opacity_8"
        tools:context=".auth.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_84sdp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/splash_logo" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/drawable_shape_login"
                android:orientation="vertical"
                android:paddingStart="@dimen/_25sdp"
                android:paddingEnd="@dimen/_25sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/outfit_semibold"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome"
                    android:textColor="@color/text_color_1"
                    android:textSize="@dimen/_28ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/outfit_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/text_color_2"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/email_address"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/drawable_shape_login_2"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/password"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/drawable_shape_login_2"
                    android:drawableEnd="@drawable/ic_eye_show"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/outfit_light"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:id="@+id/btn_login"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_28sdp"
                    android:fontFamily="@font/outfit_semibold"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp"
                    app:cornerRadius="@dimen/_8sdp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>