<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.drawerFragments.settings.ContactUsActivity">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/layout_tool_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tool_bar"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="@dimen/_21sdp"
                android:paddingEnd="@dimen/_21sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/first_name"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/drawable_shape_login_2"

                    android:fontFamily="@font/outfit_regular"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:text="@string/john"
                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/email_address"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/drawable_shape_login_2"

                    android:fontFamily="@font/outfit_regular"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"

                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/subject"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/drawable_shape_login_2"

                    android:fontFamily="@font/outfit_regular"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"

                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/your_message"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/drawable_shape_login_2"
                    android:fontFamily="@font/outfit_regular"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_14ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tv_continue_create_profile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_28sdp"

                    android:fontFamily="@font/outfit_semibold"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp"
                    app:cornerRadius="@dimen/_8sdp" />

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</layout>