<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.drawerFragments.myProfile.PersonalInformationActivity">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/layout_tool_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tool_bar"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="@dimen/_21sdp"
                android:paddingEnd="@dimen/_21sdp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_user_image"
                    android:layout_width="@dimen/_138sdp"
                    android:layout_height="@dimen/_138sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_22sdp"
                    android:padding="@dimen/_6sdp"
                    app:shapeAppearanceOverlay="@style/shape_50"
                    app:srcCompat="@drawable/dummy2"
                    android:scaleType="fitXY"
                    app:strokeColor="@color/white"

                    app:strokeWidth="@dimen/_4sdp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/outfit_medium"
                    android:text="@string/john_blake"
                    android:textColor="@color/text_color_4"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/outfit_light"
                    android:text="@string/johnblake_gmail_com"
                    android:textColor="@color/text_color_3"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/country"
                            android:textColor="@color/text_color_3"
                            android:fontFamily="@font/outfit_regular"
                            android:textSize="@dimen/_13ssp" />

                        <TextView
                            android:id="@+id/tv_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="@string/usa"
                            android:textColor="@color/text_color_16"
                            android:fontFamily="@font/outfit_medium"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/outfit_regular"
                            android:text="@string/date_of_birth"
                            android:textColor="@color/text_color_3"
                            android:textSize="@dimen/_13ssp" />

                        <TextView
                            android:id="@+id/tv_dob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="@string/mar_2_2000"
                            android:textColor="@color/text_color_16"
                            android:fontFamily="@font/outfit_medium"
                            android:textSize="@dimen/_15ssp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>